# ycc

./: .gitattributes  .gitignore  README.md  start-local.ps1
backend/: pyproject.toml
backend/app/: desktop.py  main.py  runtime_paths.py  updater.py
backend/pyinstaller/: china-finance-ai-assistant.spec  china-finance-updater.spec
backend/tests/: test_account_set_isolation_api.py  test_account_set_isolation_service.py  test_accounting_api.py  test_accounting_archive_api.py  test_accounting_archive_service.py  test_accounting_governance_api.py  test_accounting_governance_service.py  test_accounting_period_api.py  test_accounting_period_service.py  test_accounting_service.py  test_accrual_amortization_api.py  test_accrual_amortization_service.py  test_analysis_service.py  test_app_settings_api.py  test_application_update_service.py  test_audit_api.py  test_audit_service.py  test_auxiliary_dimensions_api.py  test_auxiliary_dimensions_service.py  test_backup_service.py  test_bank_reconciliation_api.py  test_bank_reconciliation_service.py  test_consolidation_api.py  test_consolidation_service.py  test_dashboard_api.py  test_data_import_service.py  test_desktop_entrypoint.py  test_desktop_runtime.py  test_ecommerce_api.py  test_ecommerce_profit_service.py  test_field_mapping_preview.py  test_finance_qa_api.py  test_finance_qa_service.py  test_financial_statement_api.py  test_financial_statement_service.py  test_fixed_asset_accounting_api.py  test_fixed_asset_accounting_service.py  test_fixed_asset_api.py  test_fixed_asset_service.py  test_home_api.py  (+45 more)
(+293 files in other folders)
